<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <item
        android:id="@+id/login"
        android:orderInCategory="100"
        android:title="@string/login"
        app:showAsAction="never" />

    <item
        android:id="@+id/orderhistory"
        android:orderInCategory="200"
        android:title="@string/orderhistory"
        app:showAsAction="never" />

    <item
        android:id="@+id/concept"
        android:orderInCategory="300"
        android:title="@string/concept"
        app:showAsAction="never" />


    <item
        android:id="@+id/references"
        android:orderInCategory="400"
        android:title="@string/references"
        app:showAsAction="never" />

    <item
        android:id="@+id/aboutus"
        android:orderInCategory="500"
        android:title="@string/aboutus"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="600"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/home"
        android:orderInCategory="1"
        android:title="@string/home"
        android:icon="@drawable/ic_home_white_24dp"
        app:showAsAction="always" />


    <item
    android:id="@+id/share"
    android:orderInCategory="2"
    android:title="@string/share"
    android:icon="@drawable/ic_share_black_24dp"
    app:showAsAction="always" />




</menu>
